--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html
 spring.profiles.active=development
-spring.datasource.url=jdbc:mysql://localhost:3306/db_cronos?createDatabaseIfNotExist=true&serverTimezone=America/Fortaleza
+spring.datasource.url=jdbc:mysql://localhost:3306/projeto_estudos_algaworks?createDatabaseIfNotExist=true&serverTimezone=America/Fortaleza
 spring.datasource.username=root
 
 ## Configurando Hikari (gerenciador de pool de conexões)
