--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html
 spring.profiles.active=development
-spring.datasource.url=jdbc:mysql://localhost:3306/projeto_estudos_algaworks?createDatabaseIfNotExist=true&serverTimezone=America/Fortaleza
+spring.datasource.url=jdbc:mysql://localhost:3306/projeto_estudos_algaworks?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true&serverTimezone=America/Fortaleza
 spring.datasource.username=root
 
 ## Configurando Hikari (gerenciador de pool de conexões)
@@ -26,5 +26,4 @@ spring.web.resources.add-mappings=false
 # Linha acima desabilita o acesso à pasta static (arquivos estáticos, imagens, javascript, css) do projeto
 #spring.resources.add-mappings=false
 
-
-## Alteração 03 no arquivo application.properties
+spring.cache.jcache.config=classpath:ehcache.xml
