--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>11</java.version>
 		<modelmapper.version>3.0.0</modelmapper.version>
+		<org-json.version>20210307</org-json.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -85,6 +86,12 @@
             <artifactId>cache-api</artifactId>
             <scope>runtime</scope>
         </dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+    		<groupId>org.json</groupId>
+    		<artifactId>json</artifactId>
+    		<version>${org-json.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
