--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html
 spring.profiles.active=development
-spring.datasource.url=jdbc:mysql://localhost:3306/projeto_estudos_algaworks?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true&serverTimezone=America/Fortaleza
-spring.datasource.username=root
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
 
 ## Configurando Hikari (gerenciador de pool de conexões)
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.maximum-pool-size=5
-#spring.datasource.hikari.idle-timeout=60000
+#spring.datasource.hikari.idle-timeout=600000
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
